feat: Add service and controller layers